force-app/main/default/objects/Contract/fields/Affiliates_Covered_Under_THIS_NDA__c.field-meta.xml
<CustomField>
    <fullName>Affiliates_Covered_Under_THIS_NDA__c</fullName>
    <label>Affiliates Covered Under THIS NDA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amrock</fullName>
            </value>
            <value>
                <fullName>Petram Data</fullName>
            </value>
            <value>
                <fullName>QL Community Fund</fullName>
            </value>
            <value>
                <fullName>QLMS</fullName>
            </value>
            <value>
                <fullName>Rock Connections</fullName>
            </value>
            <value>
                <fullName>Rocket Homes</fullName>
            </value>
            <value>
                <fullName>Rocket HQ</fullName>
            </value>
            <value>
                <fullName>Rocket Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>