force-app/main/default/objects/Contract/fields/Anticipated_Leads__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Leads__c</fullName>
    <label>Anticipated Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>