force-app/main/default/objects/Contract/fields/Are_affiliates_covered__c.field-meta.xml
<CustomField>
    <fullName>Are_affiliates_covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are affiliates covered?</label>
    <type>Checkbox</type>
</CustomField>