force-app/main/default/objects/Contract/fields/Auto_renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does contract auto-renew?</inlineHelpText>
    <label>Auto-renewal</label>
    <type>Checkbox</type>
</CustomField>