force-app/main/default/objects/Contract/fields/Client_Partner_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Signed_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Partner Signed By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Select the Client Contact</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>