force-app/main/default/objects/Contract/fields/Client_Partner_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Signed_Date__c</fullName>
    <label>Client Partner Signed Date</label>
    <type>Date</type>
</CustomField>