force-app/main/default/objects/Contract/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <inlineHelpText>Use this field for confirmation numbers or PO numbers</inlineHelpText>
    <label>Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>