force-app/main/default/objects/Contract/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <description>A Link to the uploaded Contract Document</description>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ContractId__c , ContractName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Link</label>
    <type>Text</type>
</CustomField>