force-app/main/default/objects/Contract/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>The ID of the uploaded contract stored in attachments</description>
    <label>Contract Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>