force-app/main/default/objects/Contract/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <description>The name of the uploaded contract document.</description>
    <label>Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>