force-app/main/default/objects/Contract/fields/Flyer__c.field-meta.xml
<CustomField>
    <fullName>Flyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flyer</label>
    <type>Checkbox</type>
</CustomField>