force-app/main/default/objects/Contract/fields/If_QL_are_there_modifications__c.field-meta.xml
<CustomField>
    <fullName>If_QL_are_there_modifications__c</fullName>
    <label>If QL, are there modifications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>