force-app/main/default/objects/Contract/fields/Is_this_a_QL_or_partner_NDA__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_QL_or_partner_NDA__c</fullName>
    <label>Is this a QL or partner NDA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QL</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>