force-app/main/default/objects/Contract/fields/Lump_Sum_Portal__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Portal__c</fullName>
    <label>Lump Sum Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>