force-app/main/default/objects/Contract/fields/Lump_Sum_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Portal_Link__c</fullName>
    <label>Lump Sum Portal Link</label>
    <type>Url</type>
</CustomField>