force-app/main/default/objects/Contract/fields/Marketing_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Service_Fee__c</fullName>
    <label>Marketing Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>