force-app/main/default/objects/Contract/fields/Monthly_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contract_Amount__c</fullName>
    <inlineHelpText>Total Contract Amount / # of Months in Agreement</inlineHelpText>
    <label>Monthly Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>