force-app/main/default/objects/Contract/fields/Opportunity_AM_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_AM_Email__c</fullName>
    <formula>Opportunity__r.Account_Manager__r.Email</formula>
    <label>Opportunity AM Email</label>
    <type>Text</type>
</CustomField>