force-app/main/default/objects/Contract/fields/Renewal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Deadline__c</fullName>
    <inlineHelpText>When do we need to decide if we want to auto-renew or opt-out?</inlineHelpText>
    <label>Renewal Deadline</label>
    <type>Date</type>
</CustomField>