force-app/main/default/objects/Contract/fields/Renter_Or_Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Renter_Or_Home_Owner__c</fullName>
    <label>Renter Or Home Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>