force-app/main/default/objects/Contract/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <label>Requisition Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>