force-app/main/default/objects/Contract/fields/Total_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Amount__c</fullName>
    <label>Total Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>