force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Bill</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
                <label>Marketing Sponsorship</label>
            </value>
            <value>
                <fullName>Exhibit A</fullName>
            </value>
            <value>
                <fullName>Exhibit B</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Lead Agreement</fullName>
            </value>
            <value>
                <fullName>Mortgage Subsidy</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MSA Addendum</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>