force-app/main/default/objects/Contract/fields/Type_of_Affiliate_Program__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Affiliate_Program__c</fullName>
    <label>Type of Affiliate Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Simple Move</fullName>
            </value>
            <value>
                <fullName>City Switcher</fullName>
            </value>
            <value>
                <fullName>NEI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>