force-app/main/default/objects/Contract/fields/Type_of_Remittance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Remittance__c</fullName>
    <label>Type of Remittance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>