force-app/main/default/objects/Contract/recordTypes/Event_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Event_Sponsorship</fullName>
    <active>true</active>
    <label>Marketing Sponsorship</label>
</RecordType>