force-app/main/default/objects/Contract/recordTypes/Exhibit_A.recordType-meta.xml
<RecordType>
    <fullName>Exhibit_A</fullName>
    <active>true</active>
    <label>Exhibit A</label>
</RecordType>