force-app/main/default/objects/Contract/recordTypes/Exhibit_B.recordType-meta.xml
<RecordType>
    <fullName>Exhibit_B</fullName>
    <active>true</active>
    <label>Exhibit B</label>
</RecordType>