force-app/main/default/objects/Contract/recordTypes/JMA.recordType-meta.xml
<RecordType>
    <fullName>JMA</fullName>
    <active>true</active>
    <label>JMA</label>
</RecordType>