force-app/main/default/objects/Contract/recordTypes/MSA.recordType-meta.xml
<RecordType>
    <fullName>MSA</fullName>
    <active>true</active>
    <label>MSA</label>
</RecordType>