force-app/main/default/objects/Contract/recordTypes/NDA.recordType-meta.xml
<RecordType>
    <fullName>NDA</fullName>
    <active>true</active>
    <label>NDA</label>
</RecordType>