force-app/main/default/objects/Contract/recordTypes/Relocation_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Relocation_Agreement</fullName>
    <active>true</active>
    <label>Relocation Agreement</label>
</RecordType>