force-app/main/default/objects/Contract/listViews/All_Partner_Agreements_owned_by_Nina.listView-meta.xml
<ListView>
    <fullName>All_Partner_Agreements_owned_by_Nina</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Nkiel</value>
    </filters>
    <label>All Partner Agreements owned by Nina</label>
</ListView>